added JS and linked to html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+<script src="app.js"></script>
+
     <meta charset="UTF-8">
     <title>Nile (Not AMAZON)</title>
   </head>
@@ -8,7 +11,9 @@
 
     <h1>Welcome to Nile (by Adam)</h1>
 
-    
+    <section>
+      <h3>Cool Products to buy</h3>
+    </section>
 
   </body>
 </html>
